<resources>
    <string name="app_name">App01</string>
    <string name="first_code">第一行代码</string>
    <string name="menu_remove_text">删除</string>
    <string name="menu_add_text">添加</string>
    <string name="activity_main_to_study_activity_text">点击跳转到Activity2</string>
    <string name="activity_stuty_main_text">这是Activity2界面</string>
    <string name="activity_2_return_data_text">返回数据给上一个MainActivity</string>
    <string name="change_iv_content">改变ImageView的内容</string>
    <string name="toggle_progress_bar_text">切换ProgressBar的状态</string>
    <string name="test">TEST</string>
    <string name="show_dialog">弹出对话框</string>
    <string name="show_progress_dialog">弹出进度条对话框</string>
    <string name="send_text">send</string>
    <string name="please_input">请输入</string>
    <string name="test_text">测试测试</string>
    <string name="test_text_2">测试测试2222</string>
    <string name="register">注册</string>
    <string name="back_text">返回</string>
    <string name="title_text">自定义header的标题(当前:布局页面)</string>
    <string name="edit_text">编辑</string>
    <string name="go_layout_text">跳到布局页面</string>
    <string name="go_to_list_view">跳到ListView界面</string>
    <string name="kobe_text">Kobe</string>
    <string name="lakers_text">Lakers</string>
    <string name="player_photo">player_photo</string>
    <string name="go_to_recycler_view">跳到RecyclerView界面</string>
    <string name="go_to_list_view_2">跳到ListView页面2-自定义Item内容</string>
</resources>
