<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.joker.app01.ui.UIActivityMain">

    <Button
        android:id="@+id/btn_ui_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_iv_content" />

    <ImageView
        android:id="@+id/iv_ui_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/p1"
        android:contentDescription="@string/test" />

    <Button
        android:id="@+id/btn_ui_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_progress_bar_text" />

    <ProgressBar
        android:id="@+id/pb_ui_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_ui_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_dialog" />

    <Button
        android:id="@+id/btn_ui_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_progress_dialog" />

    <Button
        android:id="@+id/btn_ui_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_layout_text" />
    <Button
        android:id="@+id/btn_ui_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_list_view" />
    <Button
        android:id="@+id/btn_ui_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_list_view_2" />
    <Button
        android:id="@+id/btn_ui_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_recycler_view" />
</LinearLayout>
