<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.joker.app01.ui.ActivityLayout">


    <com.example.joker.app01.ui.HeaderLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/please_input" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_text"
            android:textAllCaps="false" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_ui_layout_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_text" />

        <TextView
            android:id="@+id/tv_ui_layout_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/tv_ui_layout_1"
            android:text="@string/test_text_2" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/tv_ui_layout_2"
            android:layout_below="@+id/tv_ui_layout_2"
            android:src="@drawable/p2" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/test_text" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:src="@drawable/p1" />
    </FrameLayout>

    <android.support.percent.PercentRelativeLayout xmlns:yj="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            yj:layout_widthPercent="30%" />
    </android.support.percent.PercentRelativeLayout>

</LinearLayout>
